--- a/Styles.css
+++ b/Styles.css
@@ -70,6 +70,7 @@
   background: white;
   border:3px solid red;
   border-radius:10px;
+  color:red;
 }
 /* Container holds both the image and the text */
 .paper-container {
